--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,7 @@
 .target-savings-output-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   height: 100%;
   padding-top: 10px;
@@ -236,6 +236,7 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+  text-align: center;
 }
 
 .benchmarking-container {
