--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,18 @@
   flex-direction: row;
 }
 
+.dashboard {
+  overflow: overlay;
+  width: 100vw;
+  align-items: center;
+}
+
+.dashboard-title {
+  font-size: 3em;
+  padding: 1em 0;
+}
+
 .container {
-  padding: 30px;
   margin: 0;
   justify-content: stretch;
   align-items: center;
@@ -28,7 +38,7 @@
 }
 
 .vehicle-container {
-  padding: 30px;
+  padding-top: 30px;
   margin: 0;
   justify-content: stretch;
   align-items: center;
@@ -38,6 +48,7 @@
 }
 
 .trip-header {
+  padding-top: 30px;
   align-self: flex-start;
   font-size: 1.5em;
 }
@@ -57,7 +68,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   background-color: white;
-  margin: 10px 0;
+  margin-top: 10px;
 }
 
 .selected-trip-container {
@@ -78,12 +89,6 @@
   align-content: center;
   height: 100%;
   width: 100%;
-}
-
-.dashboard {
-  overflow: overlay;
-  width: 100vw;
-  align-items: center;
 }
 
 .month-container {
